otus_homework_1/k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-homework-1
  template:
    metadata:
      labels:
        app: otus-homework-1
    spec:
      containers:
        - name: otus-homework-1
          image: fikfok/otus_homework_1:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
