otus_homework_1/k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
# Если раскомментировать строку ниже, то при выполнении команды "curl arch.homework" будет ответ "308 Permanent Redirect"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 8000
            pathType: Prefix
            path: /

#Памятка
#После apply'я этого манифеста выполнить следующее:
#kubectl get ingress

#NAME            CLASS    HOSTS           ADDRESS        PORTS   AGE
#hello-ingress   <none>   arch.homework   192.168.49.2   80      34m

#Далее взять ip'шник 192.168.49.2 и в /etc/hosts/ добавить запись:
#192.168.49.2    arch.homework

#После этого команда "curl arch.homework/health" вернёт следующее:
#{"status":"OK"}
